Fixed spacing issue

--- a/_sass/_clips.scss
+++ b/_sass/_clips.scss
@@ -1,12 +1,16 @@
+.container-fluid.clips{
+  padding-right: 0px;
+  padding-left: 0px;
+}
 .clip{
   padding: 17px 0;
   line-height: 1.4;
-  &:first-child {
-    padding-left: 0px;
-  }
-  &:last-child {
-    padding-right: 0px;
-  }
+  // &:first-child {
+  //   padding-left: 0px;
+  // }
+  // &:last-child {
+  //   padding-right: 0px;
+  // }
   img {
     outline:1px solid #e3e3e3;
     margin-bottom: 0.786em;
